styles/style.scss
/* ... */
.name-count-number {
  position: absolute;
  top: 0.07rem;
  left: 0.16rem;
  vertical-align: middle;
  font-weight: 400;
  font-size: 0.6rem;
}

.hidden {
  display: none;
}

.italic-true {
  font-style: italic;
}

.visible {
    visibility: visible !important;
}

.svg {
  float: right;
  fill: green;
}

// Sign-up Page

.btn {
  box-sizing: border-box;
  background: #2ab27b;
  color: #fff;
  -webkit-font-smoothing: antialiased;
  line-height: 1.2rem;
  font-weight: 900;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 1px 1px rgba(0,0,0,.1);
  border: none;
  border-radius: 0.25rem;
  box-shadow: none;
  position: relative;
  display: inline-block;
  vertical-align: bottom;
  text-align: center;
  white-space: nowrap;
  margin: 0;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  padding: 0.875rem 2rem 1rem 2rem;
  font-size: 1.25rem;
  width: 100%;
  max-width: 100%;
  &:hover {
   box-shadow: inset 0 -2px rgba(0,0,0,.25);
  }
}

input[type="email"], input[type="password"] {
  font-size: 1.25rem;
  color: #555459;
  box-sizing: border-box;
  padding: 0.75rem;
  border: 1px solid #c5c5c5;
  border-radius: 0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  width: 100%;
  max-width: 100%;
  margin-bottom: 0.5rem;
  -webkit-transition: box-shadow 70ms ease-out, border-color 70ms ease-out;
  -moz-transition: box-shadow 70ms ease-out, border-color 70ms ease-out;
  transition: box-shadow 70ms ease-out, border-color 70ms ease-out;
  box-shadow: none;
  height: auto;
  
  &:active, &:focus {
    border-color: #2780f8;
    box-shadow: 0 0 7px rgba(39,128,248,.15);
    outline-offset: 0;
    outline: 0;
  }
}

*::-webkit-input-placeholder  {
  color: #aaa !important;
}
*::-moz-placeholder  {
  color: #aaa;
}

.page {
  background-color: #f9f9f9;
}

.page-contents {
  max-width: 1024px;
  padding: 6rem 2rem;
  margin: 0 auto;
  height: 3000px;
  box-sizing: border-box;
}

.sign-up-form-card {
  box-sizing: border-box;
  background-color: white;
  width: 66.13%;
  border-radius: 0.25rem;
  box-shadow: 0 1px 0 rgba(0,0,0,.25);
  padding: 2rem 2rem 2rem 1rem;
  margin: 0 auto 2rem;
  position: relative;
  border: 1px solid #e8e8e8;
  text-align: center;
  
  h1 {
    font-size: 2rem;
    line-height: 2.5rem;
    letter-spacing: -1px;
    font-weight: 700;
  }
  
  p {
    text-align: center;
  }
  
  .margin-bottom {
    margin-bottom: 1rem;
  }
}

.sign-up-form {
  width: 66.13%;
  margin: 0 auto;
}

